tests/dataset/tpc-ds/compiler/cpp/q49.error
/tmp/TestCPPCompiler_TPCDSQueriesq491746267682/001/prog.cpp:64:12: error: ‘w’ was not declared in this scope
   64 |   decltype(w.item) item;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq491746267682/001/prog.cpp:64:12: error: ‘w’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq491746267682/001/prog.cpp:65:12: error: ‘w’ was not declared in this scope
   65 |   decltype(w.return_ratio) return_ratio;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq491746267682/001/prog.cpp:65:12: error: ‘w’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq491746267682/001/prog.cpp:66:12: error: ‘w’ was not declared in this scope
   66 |   decltype(w.return_rank) return_rank;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq491746267682/001/prog.cpp:66:12: error: ‘w’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq491746267682/001/prog.cpp:67:12: error: ‘w’ was not declared in this scope
   67 |   decltype(w.currency_rank) currency_rank;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq491746267682/001/prog.cpp:67:12: error: ‘w’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq491746267682/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq491746267682/001/prog.cpp:140:55: error: cannot convert ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘int’ in initialization
  140 |           __items.push_back(Tmp{std::string("web"), w.item, w.return_ratio,
      |                                                     ~~^~~~
      |                                                       |
      |                                                       std::string {aka std::__cxx11::basic_string<char>}
/tmp/TestCPPCompiler_TPCDSQueriesq491746267682/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq491746267682/001/prog.cpp:150:59: error: cannot convert ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘int’ in initialization
  150 |           __items.push_back(Tmp{std::string("catalog"), c.item, c.return_ratio,
      |                                                         ~~^~~~
      |                                                           |
      |                                                           std::string {aka std::__cxx11::basic_string<char>}
/tmp/TestCPPCompiler_TPCDSQueriesq491746267682/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq491746267682/001/prog.cpp:160:57: error: cannot convert ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘int’ in initialization
  160 |           __items.push_back(Tmp{std::string("store"), s.item, s.return_ratio,
      |                                                       ~~^~~~
      |                                                         |
      |                                                         std::string {aka std::__cxx11::basic_string<char>}
/tmp/TestCPPCompiler_TPCDSQueriesq491746267682/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq491746267682/001/prog.cpp:134:27: error: ‘concat’ was not declared in this scope; did you mean ‘wcsncat’?
  134 |   std::vector<Tmp> tmp = (concat(
      |                           ^~~~~~
      |                           wcsncat
/tmp/TestCPPCompiler_TPCDSQueriesq491746267682/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq491746267682/001/prog.cpp:169:79: error: no matching function for call to ‘std::vector<std::__cxx11::basic_string<char> >::vector(<brace-enclosed initializer list>)’
  169 |                              r.channel, r.return_rank, r.currency_rank, r.item},
      |                                                                               ^
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq491746267682/001/prog.cpp:8:
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = std::__cxx11::basic_string<char>; _Alloc = std::allocator<std::__cxx11::basic_string<char> >]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq491746267682/001/prog.cpp:169:79: note:   deduced conflicting types for parameter ‘_InputIterator’ (‘std::__cxx11::basic_string<char>’ and ‘int’)
  169 |                              r.channel, r.return_rank, r.currency_rank, r.item},
      |                                                                               ^
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = std::__cxx11::basic_string<char>; _Alloc = std::allocator<std::__cxx11::basic_string<char> >; allocator_type = std::allocator<std::__cxx11::basic_string<char> >]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:7: note:   candidate expects 2 arguments, 4 provided
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = std::__cxx11::basic_string<char>; _Alloc = std::allocator<std::__cxx11::basic_string<char> >; std::__type_identity_t<_Alloc> = std::allocator<std::__cxx11::basic_string<char> >]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note:   candidate expects 2 arguments, 4 provided
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = std::__cxx11::basic_string<char>; _Alloc = std::allocator<std::__cxx11::basic_string<char> >; allocator_type = std::allocator<std::__cxx11::basic_string<char> >; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 4 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = std::__cxx11::basic_string<char>; _Alloc = std::allocator<std::__cxx11::basic_string<char> >; allocator_type = std::allocator<std::__cxx11::basic_string<char> >; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 4 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = std::__cxx11::basic_string<char>; _Alloc = std::allocator<std::__cxx11::basic_string<char> >; std::__type_identity_t<_Alloc> = std::allocator<std::__cxx11::basic_string<char> >]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:7: note:   candidate expects 2 arguments, 4 provided
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = std::__cxx11::basic_string<char>; _Alloc = std::allocator<std::__cxx11::basic_string<char> >]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   candidate expects 1 argument, 4 provided
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = std::__cxx11::basic_string<char>; _Alloc = std::allocator<std::__cxx11::basic_string<char> >]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   candidate expects 1 argument, 4 provided
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = std::__cxx11::basic_string<char>; _Alloc = std::allocator<std::__cxx11::basic_string<char> >; size_type = long unsigned int; value_type = std::__cxx11::basic_string<char>; allocator_type = std::allocator<std::__cxx11::basic_string<char> >]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:7: note:   candidate expects 3 arguments, 4 provided
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = std::__cxx11::basic_string<char>; _Alloc = std::allocator<std::__cxx11::basic_string<char> >; size_type = long unsigned int; allocator_type = std::allocator<std::__cxx11::basic_string<char> >]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note:   candidate expects 2 arguments, 4 provided
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = std::__cxx11::basic_string<char>; _Alloc = std::allocator<std::__cxx11::basic_string<char> >; allocator_type = std::allocator<std::__cxx11::basic_string<char> >]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   candidate expects 1 argument, 4 provided
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = std::__cxx11::basic_string<char>; _Alloc = std::allocator<std::__cxx11::basic_string<char> >]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 4 provided
/tmp/TestCPPCompiler_TPCDSQueriesq491746267682/001/prog.cpp:168:24: error: no matching function for call to ‘std::vector<std::pair<std::__cxx11::basic_string<char>, Tmp> >::push_back(<brace-enclosed initializer list>)’
  168 |       __items.push_back({std::vector<decltype(r.channel)>{
      |       ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  169 |                              r.channel, r.return_rank, r.currency_rank, r.item},
      |                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  170 |                          r});
      |                          ~~~
/usr/include/c++/13/bits/stl_vector.h:1281:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = std::pair<std::__cxx11::basic_string<char>, Tmp>; _Alloc = std::allocator<std::pair<std::__cxx11::basic_string<char>, Tmp> >; value_type = std::pair<std::__cxx11::basic_string<char>, Tmp>]’
 1281 |       push_back(const value_type& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1281:35: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘const std::vector<std::pair<std::__cxx11::basic_string<char>, Tmp> >::value_type&’ {aka ‘const std::pair<std::__cxx11::basic_string<char>, Tmp>&’}
 1281 |       push_back(const value_type& __x)
      |                 ~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:1298:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(value_type&&) [with _Tp = std::pair<std::__cxx11::basic_string<char>, Tmp>; _Alloc = std::allocator<std::pair<std::__cxx11::basic_string<char>, Tmp> >; value_type = std::pair<std::__cxx11::basic_string<char>, Tmp>]’
 1298 |       push_back(value_type&& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1298:30: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘std::vector<std::pair<std::__cxx11::basic_string<char>, Tmp> >::value_type&&’ {aka ‘std::pair<std::__cxx11::basic_string<char>, Tmp>&&’}
 1298 |       push_back(value_type&& __x)
      |                 ~~~~~~~~~~~~~^~~
